fix: feaster collapsing

--- a/frontend/index.css
+++ b/frontend/index.css
@@ -96,7 +96,6 @@ body {
   vertical-align: middle;
 }
 
-
 #advanced-options-form {
   margin-top: 1em;
 }
@@ -107,4 +106,11 @@ body {
 
 textarea#out {
   width: 100%;
+}
+
+/* faster collapsing */
+.collapsing {
+  -webkit-transition-duration: .20s;
+       -o-transition-duration: .20s;
+          transition-duration: .20s;
 }
